tests/fixtures/positive/complexity/LongParameterList.kt
package complexity

class LongParameterList {
    fun foo(a: Int, b: Int, c: Int, d: Int, e: Int, f: Int, g: Int, h: Int, i: Int): Int {
        return a + b + c + d + e + f + g + h + i
    }
}
