tests/fixtures/negative/complexity/LongParameterList.kt
package complexity

class LongParameterList {
    fun bar(a: Int, b: Int, c: Int): Int {
        return a + b + c
    }
}
